Make the photo uploader more visible, and when we're posting a photo hide the big "Add Photo" button to avoid people clicking on that again if they haven't noticed.

--- a/assets/css/_color-vars.scss
+++ b/assets/css/_color-vars.scss
@@ -1,4 +1,5 @@
 $colour-success: #61C924;
+$colour-success-hover: #51a91e;
 $colour-success-bg: #d6e9c6;
 $colour-success-fg: #3c763d;
 $colour-success-border: #c3e6cb;
